# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2073 2011/12/06 15:12:45 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta3 2011-12-??
 - 2011-12-06 Fixed bug#4740 - HTTP header in Redirect is not syntactically correct.
 - 2011-12-06 Fixed bug#5253 - User preferences are updated when displaying an overview.
 - 2011-12-05 Fixed bug#5356 - TicketFreeText (now Dynamic Fields) containing domain name - causes
    Agent interface issues
 - 2011-12-05 Fixed bug#3334 - FreeFields (now Dynamic Fields) with content "0" aren't displayed
    within TicketZoom view
 - 2011-12-05 Fixed bug#4032 - TicketFreeText (now Dynamic Fields)- DefaultSelection does not work
    for AgentTicketForward
 - 2011-12-05 Fixed bug#7923 - Free field value not correctly migrated error on DBUpdate-to-3.1.pl.
 - 2011-12-05 Fixed bug#7975 - Wrong Type parameter is sent on Dynamic Fields ACLs.
 - 2011-12-05 Fixed bug#7968 - DynamicField empty value "-" disappears on AJAX reload.
 - 2011-12-05 Fixed bug#3544 - Don't show link to AgentTicketCustomer if agent does not have
    permissions.
 - 2011-12-05 Fixed bug#7900 - DefaultQueue does not preselect queue in CustomerTicketMessage.
 - 2011-12-05 Fixed bug#7184 - Service catalog is not useable with sophisticated amount of entries.
 - 2011-12-05 Fixed bug#7864 - Inconsequent wrapping of text causes ugly notifications.
 - 2011-12-05 Fixed bug#7967 - Misleading comment on DF Dropdown setup.
 - 2011-12-05 Fixed bug#7966 - Little german translation enhancement.
 - 2011-12-02 Fixed bug#5437 - Reload of TicketFreeTexFields (now DynamicFields) (for ACL).
 - 2011-12-02 Fixed bug#7056 - AgentTicketMove.pm does not handle TicketFreeText
    (now DynamicFields) correctly.